exports[`test bar.js 1`] = `
"// @flow

var o = require(\'./unknown\');
o.x.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test bool.js 1`] = `
"// @flow

true.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (4:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test customfun.js 1`] = `
"// @flow

declare var idx: $Facebookism$Idx;
declare var merge: $Facebookism$Merge;
declare var mergeDeepInto: $Facebookism$MergeDeepInto;
declare var mergeInto: $Facebookism$MergeInto;
declare var mixin: $Facebookism$Mixin;
declare var objectGetPrototypeOf: Object$GetPrototypeOf
declare var objectAssign: Object$Assign

m
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
declare var idx: $Facebookism$Idx;
declare var merge: $Facebookism$Merge;
declare var mergeDeepInto: $Facebookism$MergeDeepInto;
declare var mergeInto: $Facebookism$MergeInto;
declare var mixin: $Facebookism$Mixin;
declare var objectGetPrototypeOf: Object$GetPrototypeOf;
declare var objectAssign: Object$Assign;
m;

"
`;

exports[`test foo.js 1`] = `
"/**
 * @flow
 */

var obj = {
  num: 123,
  str: \'hello\',
};

obj.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (11:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test foo_parse_fail.js 1`] = `
"/**
 * @flow
 */

var obj = {
  num: 123,
  str: \'hello\',
};

console.log(obj.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (11:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test fun.js 1`] = `
"/* @flow */

function foo(f: () => number) {
  f.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test function_builtins.js 1`] = `
"/* @flow */

function foo(f: Function) {
  f.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test generics.js 1`] = `
"// @flow

class C<X> { }

function foo(o: { cn: C<number> }) {
  o.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (7:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test if.js 1`] = `
"// @flow
const x = \'\';
if (x.)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (3:6)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test issue-1368.js 1`] = `
"/* @flow */
class Test {
  prop: number;

  constructor(prop: number) {
    this.prop = prop;
  }
}

class ExtendTest extends Test {
  extended: string;

  constructor(extended: string) {
    super(10);
    this.extended = extended;
  }

  method() {
    this.prop = 12;
    this./* here */
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (21:2)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test jsx1.js 1`] = `
"// @flow

var React = require(\'react\');

class C extends React.Component {
  props: { x: number };
}
<C 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:5687
          throw jsxError || err;
          ^

SyntaxError: Unexpected token (9:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$8.jsxParseIdentifier (/node_modules/babylon/lib/index.js:6199:10)
    at Parser.pp$8.jsxParseNamespacedName (/node_modules/babylon/lib/index.js:6210:19)
    at Parser.pp$8.jsxParseAttribute (/node_modules/babylon/lib/index.js:6305:20)
    at Parser.pp$8.jsxParseOpeningElementAt (/node_modules/babylon/lib/index.js:6317:31)
    at Parser.pp$8.jsxParseElementAt (/node_modules/babylon/lib/index.js:6339:29)
    at Parser.pp$8.jsxParseElement (/node_modules/babylon/lib/index.js:6394:15)
    at Parser.parseExprAtom (/node_modules/babylon/lib/index.js:6406:21)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3337:19)
"
`;

exports[`test jsx2.js 1`] = `
"// @flow

var React = require(\'react\');

class C extends React.Component {
  props: { x: number, y: string };
}
<C x = 0, 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:5687
          throw jsxError || err;
          ^

SyntaxError: JSX value should be either an expression or a quoted JSX text (8:7)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp$8.jsxParseAttributeValue (/node_modules/babylon/lib/index.js:6255:12)
    at Parser.pp$8.jsxParseAttribute (/node_modules/babylon/lib/index.js:6306:42)
    at Parser.pp$8.jsxParseOpeningElementAt (/node_modules/babylon/lib/index.js:6317:31)
    at Parser.pp$8.jsxParseElementAt (/node_modules/babylon/lib/index.js:6339:29)
    at Parser.pp$8.jsxParseElement (/node_modules/babylon/lib/index.js:6394:15)
    at Parser.parseExprAtom (/node_modules/babylon/lib/index.js:6406:21)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3337:19)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
"
`;

exports[`test num.js 1`] = `
"// @flow

var num = 123;
num.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test object_builtins.js 1`] = `
"/* @flow */

function foo(o: Object) {
  o.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test optional.js 1`] = `
"// @flow

function foo(obj: { x?: string, f: (x?: string) => void, o: { x?: string } }) {
  return obj.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (5:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test override.js 1`] = `
"// @flow

class C {
  override(): number | string { return 0; }
}

class D extends C {
  foo() { return this.override() }
  override(): string { return \"\"; }
  bar() { this.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (11:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test qux.js 1`] = `
"// @flow

class C { x: number; }

var c: C = new C;
c.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (7:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test str.js 1`] = `
"// @flow

\"hello\".
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (4:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test this.js 1`] = `
"/* @flow */

// issue #1197
class Foo {
  baz: string;
  bar() {}
  hello() {
    this.
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (9:2)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test typeparams.js 1`] = `
"// @flow

class Bounds<N: number, F: () => N> {
  foo: F;
  bar() {
    this.foo().
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (7:2)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test union.js 1`] = `
"/* @flow */

function foo(a: boolean, x: { bar: string }, y: Object) {
  var z;
  if (a) {
    z = x;
  } else {
    z = y;
  }
  z.
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/node_modules/babylon/lib/index.js:4255
  throw err;
  ^

SyntaxError: Unexpected token (11:0)
    at Parser.pp$5.raise (/node_modules/babylon/lib/index.js:4252:13)
    at Parser.pp.unexpected (/node_modules/babylon/lib/index.js:1633:8)
    at Parser.pp$3.parseIdentifier (/node_modules/babylon/lib/index.js:4128:10)
    at Parser.pp$3.parseSubscripts (/node_modules/babylon/lib/index.js:3360:30)
    at Parser.pp$3.parseExprSubscripts (/node_modules/babylon/lib/index.js:3347:15)
    at Parser.pp$3.parseMaybeUnary (/node_modules/babylon/lib/index.js:3317:19)
    at Parser.pp$3.parseExprOps (/node_modules/babylon/lib/index.js:3247:19)
    at Parser.pp$3.parseMaybeConditional (/node_modules/babylon/lib/index.js:3224:19)
    at Parser.pp$3.parseMaybeAssign (/node_modules/babylon/lib/index.js:3187:19)
    at Parser.parseMaybeAssign (/node_modules/babylon/lib/index.js:5700:20)
"
`;

exports[`test unknown.js 1`] = `
"// @noflow
module.exports = { x: { y: \"\" } };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @noflow
module.exports = { x: { y: \"\" } };

"
`;
